Updated sub menu styles

--- a/src/scss/base/_header.scss
+++ b/src/scss/base/_header.scss
@@ -39,7 +39,9 @@
           transform-origin: right bottom;
           transform: translateY(-50%) rotate(-45deg);
         }
-        &:hover, &:focus, &:active {
+      }
+      &.pp-has-submenu{
+        div a {
           &:after {
             display: block;
           }
