--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -24,6 +24,7 @@
 @import "modules/hovercards.scss";
 @import "modules/images.scss";
 @import "modules/infobox.scss";
+@import "modules/timeline.scss";
 //@import "modules/xxxxxx.scss";
 //@import "modules/xxxxxx.scss";
 //@import "modules/xxxxxx.scss";
