Added Royal Blue

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -8,6 +8,7 @@
 --color-primary-3:      #D2BAB9; // Fidelco Red 80
 --color-primary-4:      #010431; // Fidelco Blue Dark
 --color-primary-5:      #0C1255; // Fidelco Blue
+--color-primary-5a:     #1e69b8; // Fidelco Royal Blue
 --color-primary-6:      #7A83EA; // Fidelco Blue Light
 --color-primary-7:      #D0D2E7; // Fidelco Blue Grey
 --color-primary-8:      #EFF0FF; // Fidelco Blue Off-White
