changed circle image colro to blue

--- a/src/scss/modules/_images.scss
+++ b/src/scss/modules/_images.scss
@@ -24,7 +24,7 @@ body .wp-caption p.wp-caption-text,
 .image-style-circle-1 {
     .pp-photo-container .pp-photo-content .pp-photo-content-inner img {
         border-radius: 100%;
-        border: 8px solid var(--color-accent-1);
+        border: 8px solid var(--color-primary-5a);
         border-bottom-width: 16px;
         aspect-ratio: 1/1;
         object-fit: cover;
