--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -13,7 +13,7 @@
 //@import "rows-columns/heros.scss";
 @import "rows-columns/mobile-menu.scss";
 //@import "rows-columns/page-headers.scss";;
-//@import "rows-columns/XXXXXX.scss";
+@import "rows-columns/callouts.scss";
 //@import "rows-columns/XXXXXX.scss";
 
 /***************** 3. MODULES *****************/
