--- a/src/scss/theme.css
+++ b/src/scss/theme.css
@@ -1,5 +1,5 @@
 /***************** 1. BASE *****************/
-:root { /* Fonts */ --font-main:			"Lato",sans-serif; --font-serif:			"Playfair Display",serif; /* Colors - Primary */ --color-primary-1:      #530033; --color-primary-2:      #883634; --color-primary-3:      #D2BAB9; --color-primary-4:      #010431; --color-primary-5:      #0C1255; --color-primary-6:      #7A83EA; --color-primary-7:      #D0D2E7; --color-primary-8:      #EFF0FF; /* Colors - Accent */ --color-accent-1:       #7A83EA; --color-accent-2:       #277BD5; --color-accent-3:       #43B5AF; --color-accent-4:       #DBB147; --color-accent-5:       #C5854A; /* Colors - Shades */ --color-white:          #FFFFFF; --color-black:			#000000; --color-text:           #222222; --color-grey-dark:		#333333; --color-grey:			#606369; --color-grey-cool-60:	#BCC2CF; --color-grey-cool-50:	#D1D5DE; --color-grey-cool-40:	#E1E4E9; --color-grey-cool-30:	#EEF0F3; --color-grey-cool-20:	#F8F8FA; /* Colors - Links */ --color-link: 			var(--color-primary-2); --color-link-hover: 	var(--color-primary-1); --color-link-active: 	var(--color-primary-2); /* Calc Sizes */ --calc-min-size:		480; --calc-min-size-px:		480px; --calc-max-size:		1800; /* Spacing */ --spacing-lg: 			60px; --spacing-md: 			40px; --spacing-sm:			20px; --spacing-xs:			10px; /* Misc */ --transition-brand:		all .25s ease-out; --shadow-1: 			0px 2px 8px 0px rgba(0, 0, 0, 0.25); --shadow-2:				0px 4px 16px 0px rgba(0, 0, 0, 0.34); --border-radius-lg:		24px; --border-radius-md:		16px; --border-radius-sm:		8px; }
+:root { /* Fonts */ --font-main:			"Lato",sans-serif; --font-serif:			"Playfair Display",serif; /* Colors - Primary */ --color-primary-1:      #530033; --color-primary-2:      #883634; --color-primary-3:      #D2BAB9; --color-primary-4:      #010431; --color-primary-5:      #0C1255; --color-primary-5a:     #1e69b8; --color-primary-6:      #7A83EA; --color-primary-7:      #D0D2E7; --color-primary-8:      #EFF0FF; /* Colors - Accent */ --color-accent-1:       #7A83EA; --color-accent-2:       #277BD5; --color-accent-3:       #43B5AF; --color-accent-4:       #DBB147; --color-accent-5:       #C5854A; /* Colors - Shades */ --color-white:          #FFFFFF; --color-black:			#000000; --color-text:           #222222; --color-grey-dark:		#333333; --color-grey:			#606369; --color-grey-cool-60:	#BCC2CF; --color-grey-cool-50:	#D1D5DE; --color-grey-cool-40:	#E1E4E9; --color-grey-cool-30:	#EEF0F3; --color-grey-cool-20:	#F8F8FA; /* Colors - Links */ --color-link: 			var(--color-primary-2); --color-link-hover: 	var(--color-primary-1); --color-link-active: 	var(--color-primary-2); /* Calc Sizes */ --calc-min-size:		480; --calc-min-size-px:		480px; --calc-max-size:		1800; /* Spacing */ --spacing-lg: 			60px; --spacing-md: 			40px; --spacing-sm:			20px; --spacing-xs:			10px; /* Misc */ --transition-brand:		all .25s ease-out; --shadow-1: 			0px 2px 8px 0px rgba(0, 0, 0, 0.25); --shadow-2:				0px 4px 16px 0px rgba(0, 0, 0, 0.34); --border-radius-lg:		24px; --border-radius-md:		16px; --border-radius-sm:		8px; }
 
 /*********  BUTTONS  *********/
 /*** Reset ***/
@@ -66,6 +66,11 @@ body h1, body h2, body h3, body h4, body h5, body h6 { margin: 0 0 var(--spacing
 /*** HR ***/
 hr { margin: var(--spacing-sm) 0; border: 0; height: 2px; background-color: rgba(0, 0, 0, 0.1); }
 
+/*** MISC ***/
+.social-media-icon-links .fl-icon i { box-shadow: var(--shadow-1); }
+
+.social-media-icon-links .fl-icon:hover i, .social-media-icon-links .fl-icon:focus i { box-shadow: var(--shadow-2); }
+
 /********* HEADER *********/
 #site-header { position: relative; z-index: 6; }
 
@@ -80,7 +85,7 @@ hr { margin: var(--spacing-sm) 0; border: 0; height: 2px; background-color: rgba
 
 #site-header .main-nav .menu .sub-menu li a:after { content: ''; position: absolute; inset: 50% 30px auto auto; z-index: 1; display: none; width: 9px; height: 9px; margin: -5px -5px 0 0; border-right: 2px solid var(--color-primary-5); border-bottom: 2px solid var(--color-primary-5); transform-origin: right bottom; transform: translateY(-50%) rotate(-45deg); }
 
-#site-header .main-nav .menu .sub-menu li a:hover:after, #site-header .main-nav .menu .sub-menu li a:focus:after, #site-header .main-nav .menu .sub-menu li a:active:after { display: block; }
+#site-header .main-nav .menu .sub-menu li.pp-has-submenu div a:after { display: block; }
 
 /*** Sticky Nav ***/
 header.fl-theme-builder-header-shrink #site-header #logo-box { margin-bottom: 10px; }
@@ -294,60 +299,67 @@ body .pp-offcanvas-container:after { background: none; }
 
 #mobile-menu .menu .sub-menu > li .sub-menu a { font-size: 17px; }
 
+/********* CALLOUTs *********/
+/*** Style 1 ***/
+.callout-content-1 > .fl-col-content { background-size: auto 120%; background-position-y: calc(100% + 20px); position: relative; }
+
+.callout-content-1 > .fl-col-content:before { content: ""; position: absolute; inset: 24px 24px auto auto; background-color: #883634; border: 4px solid #FFFFFF; border-radius: 100%; width: 36px; aspect-ratio: 1/1; }
+
+@media only screen and (min-width: 820px) { .callout-content-1 > .fl-col-content:before { width: 44px; inset: 40px 40px auto auto; } }
+
+@media only screen and (max-width: 820px) { .callout-content-1 > .fl-col-content { background-size: auto 85%; background-position: right top; overflow: hidden; } }
+
+@media only screen and (max-width: 820px) { .callout-content-1 .content-col { position: absolute; inset: auto auto 0 0; height: 100%; width: 100% !important; } .callout-content-1 .content-col > .fl-col-content { justify-content: flex-end !important; background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 40%, black 100%); } }
+
 /***************** 3. MODULES *****************/
 /******** ACCORDION ********/
 /*** Style 1 ***/
-.accordion-style-1 .pp-accordion { border-radius: var(--border-radius-md); background: var(--color-white); box-shadow: var(--shadow-1); padding: 0 1px; }
+body .accordion-style-1 .pp-accordion { border-radius: var(--border-radius-md); background: var(--color-white); box-shadow: var(--shadow-1); padding: 0 1px; }
 
-.accordion-style-1 .pp-accordion .pp-accordion-item:first-child .pp-accordion-button { border-top-left-radius: var(--border-radius-md); border-top-right-radius: var(--border-radius-md); }
+body .accordion-style-1 .pp-accordion .pp-accordion-item:first-child .pp-accordion-button { border-top-left-radius: var(--border-radius-md); border-top-right-radius: var(--border-radius-md); }
 
-.accordion-style-1 .pp-accordion .pp-accordion-item:last-child .pp-accordion-button, .accordion-style-1 .pp-accordion .pp-accordion-item:last-child .pp-accordion-content { border-bottom-left-radius: var(--border-radius-md); border-bottom-right-radius: var(--border-radius-md); }
+body .accordion-style-1 .pp-accordion .pp-accordion-item:last-child .pp-accordion-button, body .accordion-style-1 .pp-accordion .pp-accordion-item:last-child .pp-accordion-content { border-bottom-left-radius: var(--border-radius-md); border-bottom-right-radius: var(--border-radius-md); }
 
-.accordion-style-1 .pp-accordion .pp-accordion-item.pp-accordion-item-active:last-child .pp-accordion-button { border-radius: 0; }
+body .accordion-style-1 .pp-accordion .pp-accordion-item.pp-accordion-item-active:last-child .pp-accordion-button { border-radius: 0; }
 
-.accordion-style-1 .pp-accordion-item .pp-accordion-button-icon { font-size: 27px; margin-top: 2px; }
+body .accordion-style-1 .pp-accordion-item .pp-accordion-button-icon { font-size: 27px; margin-top: 2px; }
 
-.accordion-style-1 .pp-accordion-item .pp-accordion-button-icon.pp-accordion-icon-left { padding-right: 10px; }
+body .accordion-style-1 .pp-accordion-item .pp-accordion-button-icon.pp-accordion-icon-left { padding-right: 10px; }
 
-.accordion-style-1 .pp-accordion-item .pp-accordion-button { transition: var(--transition-brand); padding: 16px 24px; background: #fff; border-bottom: 1px solid var(--color-primary-7); color: var(--color-primary-4); }
+body .accordion-style-1 .pp-accordion-item .pp-accordion-button { transition: var(--transition-brand); padding: 16px 24px; background: #fff; border-bottom: 1px solid var(--color-primary-7); color: var(--color-primary-4); }
 
-.accordion-style-1 .pp-accordion-item .pp-accordion-button .pp-accordion-button-label { font-family: var(--font-main); font-weight: 800; font-size: 18px; line-height: 1.4; padding-right: 20px; }
+body .accordion-style-1 .pp-accordion-item .pp-accordion-button .pp-accordion-button-label { font-family: var(--font-main); font-weight: 800; font-size: 18px; line-height: 1.4; padding-right: 20px; }
 
-.accordion-style-1 .pp-accordion-item .pp-accordion-button:hover { background: var(--color-grey-cool-30); }
+body .accordion-style-1 .pp-accordion-item .pp-accordion-button:hover { background: var(--color-grey-cool-30); }
 
-.accordion-style-1 .pp-accordion-item .pp-accordion-button:active, .accordion-style-1 .pp-accordion-item .pp-accordion-button:focus, .accordion-style-1 .pp-accordion-item.pp-accordion-item-active .pp-accordion-button { background: var(--color-primary-5); border-bottom-color: black; }
+body .accordion-style-1 .pp-accordion-item .pp-accordion-button:active, body .accordion-style-1 .pp-accordion-item .pp-accordion-button:focus, body .accordion-style-1 .pp-accordion-item.pp-accordion-item-active .pp-accordion-button { background: var(--color-primary-5); border-bottom-color: black; }
 
-.accordion-style-1 .pp-accordion-item .pp-accordion-button:active *, .accordion-style-1 .pp-accordion-item .pp-accordion-button:focus *, .accordion-style-1 .pp-accordion-item.pp-accordion-item-active .pp-accordion-button * { color: #fff; }
+body .accordion-style-1 .pp-accordion-item .pp-accordion-button:active *, body .accordion-style-1 .pp-accordion-item .pp-accordion-button:focus *, body .accordion-style-1 .pp-accordion-item.pp-accordion-item-active .pp-accordion-button * { color: #fff; }
 
-.accordion-style-1 .pp-accordion-item .pp-accordion-content { padding: 16px 24px; background: var(--color-grey-cool-30); border: 0; }
+body .accordion-style-1 .pp-accordion-item .pp-accordion-content { padding: 16px 24px; background: var(--color-grey-cool-30); border: 0; }
 
 /******** TABS ********/
-.tabs-style-1 { --tab-text-color: blue; --tab-bg-color: #efefef; --tab-border-color: blue; --tab-text-color-hover: green; --tab-bg-color-hover: green; --tab-border-color-hover: green; --tab-text-color-active: #fff; --tab-bg-color-active: red; --tab-border-color-active: red; }
+.tabs-pill-style .pp-tabs.pp-tabs-default .pp-tabs-labels { display: flex !important; justify-content: flex-start; flex-wrap: wrap; gap: 10px; }
 
-.tabs-style-1 .pp-tabs.pp-tabs-default .pp-tabs-labels { display: flex; justify-content: center; flex-wrap: nowrap; }
+.tabs-pill-style .pp-tabs.pp-tabs-default .pp-tabs-labels .pp-tabs-label { transition: var(--transition-brand); top: auto !important; position: relative; display: flex; flex-direction: column; justify-content: center; padding: 8px 18px; margin: 0; color: var(--color-text); background: #fff; border: 1px solid var(--color-primary-5a); border-radius: 30px; }
 
-.tabs-style-1 .pp-tabs.pp-tabs-default .pp-tabs-labels .pp-tabs-label { transition: var(--transition-brand); top: auto !important; position: relative; display: flex; flex-direction: column; justify-content: center; border: 0; padding: 15px; margin: 0 4px; color: var(--tab-text-color); background: var(--tab-bg-color); border-color: var(--tab-border-color); }
+.tabs-pill-style .pp-tabs.pp-tabs-default .pp-tabs-labels .pp-tabs-label:first-child { margin-left: -10px; }
 
-.tabs-style-1 .pp-tabs.pp-tabs-default .pp-tabs-labels .pp-tabs-label .pp-tab-label-inner { white-space: normal; position: static; }
+.tabs-pill-style .pp-tabs.pp-tabs-default .pp-tabs-labels .pp-tabs-label .pp-tab-label-inner { white-space: normal; position: static; }
 
-.tabs-style-1 .pp-tabs.pp-tabs-default .pp-tabs-labels .pp-tabs-label .pp-tab-label-flex { justify-content: center; }
+.tabs-pill-style .pp-tabs.pp-tabs-default .pp-tabs-labels .pp-tabs-label .pp-tab-label-flex { justify-content: center; }
 
-.tabs-style-1 .pp-tabs.pp-tabs-default .pp-tabs-labels .pp-tabs-label .pp-tab-title { font-family: var(--font-main); font-weight: 700; font-size: 19px; line-height: 1.4; }
+.tabs-pill-style .pp-tabs.pp-tabs-default .pp-tabs-labels .pp-tabs-label .pp-tab-title { font-family: var(--font-main); font-weight: 600; font-size: 17px; line-height: 1.4; }
 
-.tabs-style-1 .pp-tabs.pp-tabs-default .pp-tabs-labels .pp-tabs-label .pp-tab-icon { margin-bottom: 4px !important; }
+.tabs-pill-style .pp-tabs.pp-tabs-default .pp-tabs-labels .pp-tabs-label .pp-tab-icon { margin-bottom: 4px !important; }
 
-.tabs-style-1 .pp-tabs.pp-tabs-default .pp-tabs-labels .pp-tabs-label:hover, .tabs-style-1 .pp-tabs.pp-tabs-default .pp-tabs-labels .pp-tabs-label:focus { color: var(--tab-text-color-hover); background: var(--tab-bg-color-hover); border-color: var(--tab-border-color-hover); }
+.tabs-pill-style .pp-tabs.pp-tabs-default .pp-tabs-labels .pp-tabs-label:hover, .tabs-pill-style .pp-tabs.pp-tabs-default .pp-tabs-labels .pp-tabs-label:focus, .tabs-pill-style .pp-tabs.pp-tabs-default .pp-tabs-labels .pp-tabs-label.pp-tab-active { color: #fff; background: var(--color-primary-5); border-color: var(--color-primary-5); }
 
-.tabs-style-1 .pp-tabs.pp-tabs-default .pp-tabs-labels .pp-tabs-label.pp-tab-active { color: var(--tab-text-color-active); background: var(--tab-bg-color-active); border-color: var(--tab-border-color-active); }
+.tabs-pill-style .pp-tabs.pp-tabs-default .pp-tab-description { margin-top: 4px; font-size: 15px; }
 
-.tabs-style-1 .pp-tabs.pp-tabs-default .pp-tab-description { margin-top: 4px; font-size: 15px; }
+.tabs-pill-style .pp-tabs.pp-tabs-default .pp-tabs-panel-content { padding: 20px 0 0; }
 
-.tabs-style-1 .pp-tabs.pp-tabs-default .pp-tabs-panel-content { padding: 40px; }
-
-@media only screen and (min-width: 820px) { .tabs-style-1 .pp-tabs.pp-tabs-default .pp-tabs-panel-content { border: 1px solid rgba(0, 0, 0, 0.07); border-top-width: 2px; } }
-
-/* Mobile Styles*/
-@media only screen and (max-width: 820px) { .tabs-style-1 .pp-tabs-default .pp-tabs-label .pp-tab-label-inner { white-space: normal; } .tabs-style-1 .pp-tabs-horizontal .pp-tabs-label.pp-tabs-panel-label { padding: 10px !important; background: var(--tab-bg-color); border-color: var(--tab-border-color) !important; } .tabs-style-1 .pp-tabs .pp-tab-title { font-family: var(--font-main); font-weight: 700; font-size: 18px; line-height: 1.3; } .tabs-style-1 .pp-tabs-panel-label .pp-toggle-icon { color: var(--tab-text-color); font-size: 13px; border: 0; padding: 5px; max-height: 24px; line-height: 1; } .tabs-style-1 .pp-tabs.pp-tabs-default .pp-tabs-panel-content { padding: 15px; } .tabs-style-1 .pp-tabs-default .pp-tabs-label .pp-tab-label-inner { display: flex; flex-direction: row !important; } .tabs-style-1 .pp-tabs .pp-tabs-label.pp-tab-active, .tabs-style-1 .pp-tabs .pp-tabs-label:focus { border-bottom: 0; background: var(--tab-bg-color-active); border-color: var(--tab-border-color-active); } .tabs-style-1 .pp-tabs .pp-tabs-label.pp-tab-active .pp-tab-title, .tabs-style-1 .pp-tabs .pp-tabs-label:focus .pp-tab-title, .tabs-style-1 .pp-tabs .pp-tabs-label.pp-tab-active .pp-toggle-icon, .tabs-style-1 .pp-tabs .pp-tabs-label:focus .pp-toggle-icon { color: var(--tab-text-color-active); } }
+.tabs-pill-style .pp-tabs.pp-tabs-default .pp-tabs-panels .pp-tabs-label { display: none; }
 
 /********* Content Grid Basic *********/
 .content-grid-style-basic .pp-content-post, .content-grid-style-basic .listing * { transition: var(--transition-brand); }
@@ -403,6 +415,9 @@ body .pp-offcanvas-container:after { background: none; }
 /*** Rows Layout ***/
 @media only screen and (min-width: 820px) { .content-grid-style-basic.rows-layout .listing { display: flex; gap: 30px; } .content-grid-style-basic.rows-layout .featured-image-bg { width: 100%; flex: 0 0 280px; } .content-grid-style-basic.rows-layout .info { padding: 0; flex: 1; } }
 
+/*** Image Sizes ***/
+.content-grid-style-basic.img-portrait .featured-image-bg { aspect-ratio: 15 / 16; }
+
 /*** Hide Elements ***/
 .content-grid-style-basic.hide-image .featured-image-bg, .content-grid-style-basic.hide-date .date, .content-grid-style-basic.hide-excerpt .excerpt { display: none; }
 
@@ -411,7 +426,7 @@ body .pp-offcanvas-container:after { background: none; }
 .heading-default-style .pp-heading-content .heading-title:not(.text-inline-block) .pp-secondary-title { margin-bottom: 0 !important; font-size: 75% !important; }
 
 /*** Section Heading ***/
-.section-heading .pp-heading-content .heading-title { font-size: clamp(28px, 4vw, 46px); }
+.section-heading .pp-heading-content .heading-title { font-size: clamp(32px, 4vw, 56px); }
 
 .section-heading .pp-heading-content .heading-title .pp-primary-title { font-weight: bold; }
 
@@ -438,7 +453,7 @@ body .wp-caption img, .image-caption-style-1 .pp-photo-container .pp-photo-conte
 body .wp-caption p.wp-caption-text, .image-caption-style-1 .pp-photo-caption { font-size: 16px; line-height: 1.3; margin: 0; padding: 10px 0 2px; color: #000000; }
 
 /*** Circle Style ***/
-.image-style-circle-1 .pp-photo-container .pp-photo-content .pp-photo-content-inner img { border-radius: 100%; border: 8px solid var(--color-accent-1); border-bottom-width: 16px; aspect-ratio: 1/1; -o-object-fit: cover; object-fit: cover; }
+.image-style-circle-1 .pp-photo-container .pp-photo-content .pp-photo-content-inner img { border-radius: 100%; border: 8px solid var(--color-primary-5a); border-bottom-width: 16px; aspect-ratio: 1/1; -o-object-fit: cover; object-fit: cover; }
 
 /******** INFOBOX ********/
 /*** CTA 1 ***/
