Added Testimonial styles

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,6 +1,7 @@
 :root {
 /* Fonts */
 --font-main:			"Lato",sans-serif;
+--font-raleway:         "Raleway";
 --font-serif:			"Playfair Display",serif;
 /* Colors - Primary */
 --color-primary-1:      #530033; // Magenta
