--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -1,4 +1,9 @@
+/***************** 0. EXTERNAL IMPORTS *****************/
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;800&display=swap');
+
 /***************** 1. BASE *****************/
+
+
 @import "base/variables.scss";
 @import "base/buttons.scss";
 @import "base/global.scss";
@@ -25,6 +30,7 @@
 @import "modules/images.scss";
 @import "modules/infobox.scss";
 @import "modules/timeline.scss";
+@import "modules/testimonials.scss";
 //@import "modules/xxxxxx.scss";
 //@import "modules/xxxxxx.scss";
 //@import "modules/xxxxxx.scss";
