--- a/src/scss/modules/_accordion.scss
+++ b/src/scss/modules/_accordion.scss
@@ -35,6 +35,7 @@
       padding: 16px 24px;
       background: #fff;
       border-bottom: 1px solid var(--color-primary-7);
+      border-bottom-width: 1px !important;
       color: var(--color-primary-4);
       .pp-accordion-button-label {
         font-family: var(--font-main);
