added post layout styles for latest posts

--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -31,6 +31,7 @@
 @import "modules/infobox.scss";
 @import "modules/timeline.scss";
 @import "modules/testimonials.scss";
+@import "modules/latest-posts.scss"
 //@import "modules/xxxxxx.scss";
 //@import "modules/xxxxxx.scss";
 //@import "modules/xxxxxx.scss";
