--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -31,8 +31,8 @@
 @import "modules/infobox.scss";
 @import "modules/timeline.scss";
 @import "modules/testimonials.scss";
-@import "modules/latest-posts.scss"
-//@import "modules/xxxxxx.scss";
+@import "modules/latest-posts.scss";
+@import "modules/shop.scss";
 //@import "modules/xxxxxx.scss";
 //@import "modules/xxxxxx.scss";
 //@import "modules/xxxxxx.scss";
